parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PROCEDIMIENTO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER
Rule 2     sentencias -> sentencias sentencia
Rule 3     sentencias -> sentencia
Rule 4     sentencias -> empty
Rule 5     sentencia -> declaracion_o_funcion
Rule 6     sentencia -> declaracion_arreglo
Rule 7     sentencia -> asignacion
Rule 8     sentencia -> imprimir
Rule 9     sentencia -> ingresar
Rule 10    sentencia -> si
Rule 11    sentencia -> mientras
Rule 12    sentencia -> para
Rule 13    sentencia -> casos
Rule 14    sentencia -> retornar
Rule 15    sentencia -> procedimiento
Rule 16    tipo -> ENTERO
Rule 17    tipo -> DECIMAL
Rule 18    tipo -> DOBLE
Rule 19    tipo -> CARACTER
Rule 20    tipo -> BOLEANO
Rule 21    declaracion_o_funcion -> tipo ID PUNTOCOMA
Rule 22    declaracion_o_funcion -> tipo ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 23    declaracion_o_funcion -> CONSTANTE tipo ID IGUAL expresion PUNTOCOMA
Rule 24    declaracion_arreglo -> tipo ID CORCHETEIZQ dimensiones CORCHETEDER PUNTOCOMA
Rule 25    dimensiones -> NUMERO
Rule 26    dimensiones -> dimensiones COMA NUMERO
Rule 27    asignacion -> ID IGUAL expresion PUNTOCOMA
Rule 28    asignacion -> ID IGUAL INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
Rule 29    ingresar -> INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
Rule 30    parametro_unico -> expresion
Rule 31    imprimir -> IMPRIMIR PARIZQ parametros PARDER PUNTOCOMA
Rule 32    parametros -> expresion
Rule 33    parametros -> parametros COMA expresion
Rule 34    parametros -> parametros PUNTO expresion
Rule 35    parametros -> empty
Rule 36    si -> SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 37    si -> SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER DELOCONTRARIO LLAVEIZQ sentencias LLAVEDER
Rule 38    mientras -> MIENTRAS PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 39    para -> PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER HACER LLAVEIZQ sentencias LLAVEDER
Rule 40    para -> PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER LLAVEIZQ sentencias LLAVEDER
Rule 41    inicializacion_para -> ID
Rule 42    inicializacion_para -> ID IGUAL expresion
Rule 43    inicializacion_para -> tipo ID
Rule 44    inicializacion_para -> tipo ID IGUAL expresion
Rule 45    paso_para -> ID IGUAL expresion
Rule 46    casos -> CASOS ID LLAVEIZQ lista_casos defecto LLAVEDER
Rule 47    lista_casos -> lista_casos caso
Rule 48    lista_casos -> caso
Rule 49    caso -> CASO NUMERO DOSPUNTOS sentencias PARAR PUNTOCOMA
Rule 50    defecto -> DEFECTO DOSPUNTOS sentencias
Rule 51    defecto -> empty
Rule 52    procedimiento -> ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
Rule 53    parametros_funcion -> tipo ID opcion_mas_params
Rule 54    parametros_funcion -> empty
Rule 55    opcion_mas_params -> COMA tipo ID opcion_mas_params
Rule 56    opcion_mas_params -> COMA mas_ids
Rule 57    opcion_mas_params -> empty
Rule 58    mas_ids -> ID
Rule 59    mas_ids -> mas_ids COMA ID
Rule 60    retornar -> RETORNAR PARIZQ expresion PARDER PUNTOCOMA
Rule 61    condicion -> expresion operador_relacional expresion
Rule 62    condicion -> VERDADERO
Rule 63    operador_relacional -> MAYOR
Rule 64    operador_relacional -> MENOR
Rule 65    operador_relacional -> MAYORIGUAL
Rule 66    operador_relacional -> MENORIGUAL
Rule 67    operador_relacional -> IGUALIGUAL
Rule 68    operador_relacional -> DIFERENTE
Rule 69    expresion -> expresion MAS termino
Rule 70    expresion -> expresion MENOS termino
Rule 71    expresion -> termino
Rule 72    termino -> termino POR factor
Rule 73    termino -> termino DIVIDIDO factor
Rule 74    termino -> factor
Rule 75    factor -> NUMERO
Rule 76    factor -> CADENA
Rule 77    factor -> ID
Rule 78    factor -> VERDADERO
Rule 79    factor -> PARIZQ expresion PARDER
Rule 80    empty -> <empty>

Terminals, with rules where they appear

BOLEANO              : 20
CADENA               : 76
CARACTER             : 19
CASO                 : 49
CASOS                : 46
COMA                 : 26 33 55 56 59
CONSTANTE            : 23
CORCHETEDER          : 24
CORCHETEIZQ          : 24
DECIMAL              : 17
DEFECTO              : 50
DELOCONTRARIO        : 37
DIFERENTE            : 68
DIVIDIDO             : 73
DOBLE                : 18
DOSPUNTOS            : 49 50
ENTERO               : 16
HACER                : 39
ID                   : 1 21 22 23 24 27 28 41 42 43 44 45 46 52 53 55 58 59 77
IGUAL                : 23 27 28 42 44 45
IGUALIGUAL           : 67
IMPRIMIR             : 31
INGRESAR             : 28 29
LLAVEDER             : 1 22 36 37 37 38 39 40 46 52
LLAVEIZQ             : 1 22 36 37 37 38 39 40 46 52
MAS                  : 69
MAYOR                : 63
MAYORIGUAL           : 65
MENOR                : 64
MENORIGUAL           : 66
MENOS                : 70
MIENTRAS             : 38
NUMERO               : 25 26 49 75
PARA                 : 39 40
PARAR                : 49
PARDER               : 1 22 28 29 31 36 37 38 39 40 52 60 79
PARIZQ               : 1 22 28 29 31 36 37 38 39 40 52 60 79
POR                  : 72
PROCEDIMIENTO        : 
PROGRAMA             : 1
PUNTO                : 34
PUNTOCOMA            : 21 23 24 27 28 29 31 39 39 40 40 49 60
RETORNAR             : 60
SI                   : 36 37
VERDADERO            : 62 78
error                : 

Nonterminals, with rules where they appear

asignacion           : 7
caso                 : 47 48
casos                : 13
condicion            : 36 37 38 39 40
declaracion_arreglo  : 6
declaracion_o_funcion : 5
defecto              : 46
dimensiones          : 24 26
empty                : 4 35 51 54 57
expresion            : 23 27 30 32 33 34 42 44 45 60 61 61 69 70 79
factor               : 72 73 74
imprimir             : 8
ingresar             : 9
inicializacion_para  : 39 40
lista_casos          : 46 47
mas_ids              : 56 59
mientras             : 11
opcion_mas_params    : 53 55
operador_relacional  : 61
para                 : 12
parametro_unico      : 28 29
parametros           : 31 33 34
parametros_funcion   : 22 52
paso_para            : 39 40
procedimiento        : 15
programa             : 0
retornar             : 14
sentencia            : 2 3
sentencias           : 1 2 22 36 37 37 38 39 40 49 50 52
si                   : 10
termino              : 69 70 71 72 73
tipo                 : 21 22 23 24 43 44 53 55

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . PARIZQ PARDER LLAVEIZQ sentencias LLAVEDER

    PARIZQ          shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID PARIZQ . PARDER LLAVEIZQ sentencias LLAVEDER

    PARDER          shift and go to state 5


state 5

    (1) programa -> PROGRAMA ID PARIZQ PARDER . LLAVEIZQ sentencias LLAVEDER

    LLAVEIZQ        shift and go to state 6


state 6

    (1) programa -> PROGRAMA ID PARIZQ PARDER LLAVEIZQ . sentencias LLAVEDER
    (2) sentencias -> . sentencias sentencia
    (3) sentencias -> . sentencia
    (4) sentencias -> . empty
    (5) sentencia -> . declaracion_o_funcion
    (6) sentencia -> . declaracion_arreglo
    (7) sentencia -> . asignacion
    (8) sentencia -> . imprimir
    (9) sentencia -> . ingresar
    (10) sentencia -> . si
    (11) sentencia -> . mientras
    (12) sentencia -> . para
    (13) sentencia -> . casos
    (14) sentencia -> . retornar
    (15) sentencia -> . procedimiento
    (80) empty -> .
    (21) declaracion_o_funcion -> . tipo ID PUNTOCOMA
    (22) declaracion_o_funcion -> . tipo ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
    (23) declaracion_o_funcion -> . CONSTANTE tipo ID IGUAL expresion PUNTOCOMA
    (24) declaracion_arreglo -> . tipo ID CORCHETEIZQ dimensiones CORCHETEDER PUNTOCOMA
    (27) asignacion -> . ID IGUAL expresion PUNTOCOMA
    (28) asignacion -> . ID IGUAL INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
    (31) imprimir -> . IMPRIMIR PARIZQ parametros PARDER PUNTOCOMA
    (29) ingresar -> . INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
    (36) si -> . SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
    (37) si -> . SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER DELOCONTRARIO LLAVEIZQ sentencias LLAVEDER
    (38) mientras -> . MIENTRAS PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
    (39) para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER HACER LLAVEIZQ sentencias LLAVEDER
    (40) para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER LLAVEIZQ sentencias LLAVEDER
    (46) casos -> . CASOS ID LLAVEIZQ lista_casos defecto LLAVEDER
    (60) retornar -> . RETORNAR PARIZQ expresion PARDER PUNTOCOMA
    (52) procedimiento -> . ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
    (16) tipo -> . ENTERO
    (17) tipo -> . DECIMAL
    (18) tipo -> . DOBLE
    (19) tipo -> . CARACTER
    (20) tipo -> . BOLEANO

  ! shift/reduce conflict for CONSTANTE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IMPRIMIR resolved as shift
  ! shift/reduce conflict for INGRESAR resolved as shift
  ! shift/reduce conflict for SI resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for PARA resolved as shift
  ! shift/reduce conflict for CASOS resolved as shift
  ! shift/reduce conflict for RETORNAR resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for DOBLE resolved as shift
  ! shift/reduce conflict for CARACTER resolved as shift
  ! shift/reduce conflict for BOLEANO resolved as shift
    LLAVEDER        reduce using rule 80 (empty -> .)
    CONSTANTE       shift and go to state 23
    ID              shift and go to state 7
    IMPRIMIR        shift and go to state 25
    INGRESAR        shift and go to state 24
    SI              shift and go to state 26
    MIENTRAS        shift and go to state 27
    PARA            shift and go to state 28
    CASOS           shift and go to state 29
    RETORNAR        shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    DOBLE           shift and go to state 33
    CARACTER        shift and go to state 34
    BOLEANO         shift and go to state 35

  ! CONSTANTE       [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]
  ! IMPRIMIR        [ reduce using rule 80 (empty -> .) ]
  ! INGRESAR        [ reduce using rule 80 (empty -> .) ]
  ! SI              [ reduce using rule 80 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 80 (empty -> .) ]
  ! PARA            [ reduce using rule 80 (empty -> .) ]
  ! CASOS           [ reduce using rule 80 (empty -> .) ]
  ! RETORNAR        [ reduce using rule 80 (empty -> .) ]
  ! ENTERO          [ reduce using rule 80 (empty -> .) ]
  ! DECIMAL         [ reduce using rule 80 (empty -> .) ]
  ! DOBLE           [ reduce using rule 80 (empty -> .) ]
  ! CARACTER        [ reduce using rule 80 (empty -> .) ]
  ! BOLEANO         [ reduce using rule 80 (empty -> .) ]

    sentencias                     shift and go to state 8
    sentencia                      shift and go to state 9
    empty                          shift and go to state 10
    declaracion_o_funcion          shift and go to state 11
    declaracion_arreglo            shift and go to state 12
    asignacion                     shift and go to state 13
    imprimir                       shift and go to state 14
    ingresar                       shift and go to state 15
    si                             shift and go to state 16
    mientras                       shift and go to state 17
    para                           shift and go to state 18
    casos                          shift and go to state 19
    retornar                       shift and go to state 20
    procedimiento                  shift and go to state 21
    tipo                           shift and go to state 22

state 7

    (27) asignacion -> ID . IGUAL expresion PUNTOCOMA
    (28) asignacion -> ID . IGUAL INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
    (52) procedimiento -> ID . PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER

    IGUAL           shift and go to state 36
    PARIZQ          shift and go to state 37


state 8

    (1) programa -> PROGRAMA ID PARIZQ PARDER LLAVEIZQ sentencias . LLAVEDER
    (2) sentencias -> sentencias . sentencia
    (5) sentencia -> . declaracion_o_funcion
    (6) sentencia -> . declaracion_arreglo
    (7) sentencia -> . asignacion
    (8) sentencia -> . imprimir
    (9) sentencia -> . ingresar
    (10) sentencia -> . si
    (11) sentencia -> . mientras
    (12) sentencia -> . para
    (13) sentencia -> . casos
    (14) sentencia -> . retornar
    (15) sentencia -> . procedimiento
    (21) declaracion_o_funcion -> . tipo ID PUNTOCOMA
    (22) declaracion_o_funcion -> . tipo ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
    (23) declaracion_o_funcion -> . CONSTANTE tipo ID IGUAL expresion PUNTOCOMA
    (24) declaracion_arreglo -> . tipo ID CORCHETEIZQ dimensiones CORCHETEDER PUNTOCOMA
    (27) asignacion -> . ID IGUAL expresion PUNTOCOMA
    (28) asignacion -> . ID IGUAL INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
    (31) imprimir -> . IMPRIMIR PARIZQ parametros PARDER PUNTOCOMA
    (29) ingresar -> . INGRESAR PARIZQ parametro_unico PARDER PUNTOCOMA
    (36) si -> . SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
    (37) si -> . SI PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER DELOCONTRARIO LLAVEIZQ sentencias LLAVEDER
    (38) mientras -> . MIENTRAS PARIZQ condicion PARDER LLAVEIZQ sentencias LLAVEDER
    (39) para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER HACER LLAVEIZQ sentencias LLAVEDER
    (40) para -> . PARA PARIZQ inicializacion_para PUNTOCOMA condicion PUNTOCOMA paso_para PARDER LLAVEIZQ sentencias LLAVEDER
    (46) casos -> . CASOS ID LLAVEIZQ lista_casos defecto LLAVEDER
    (60) retornar -> . RETORNAR PARIZQ expresion PARDER PUNTOCOMA
    (52) procedimiento -> . ID PARIZQ parametros_funcion PARDER LLAVEIZQ sentencias LLAVEDER
    (16) tipo -> . ENTERO
    (17) tipo -> . DECIMAL
    (18) tipo -> . DOBLE
    (19) tipo -> . CARACTER
    (20) tipo -> . BOLEANO

    LLAVEDER        shift and go to state 38
    CONSTANTE       shift and go to state 23
    ID              shift and go to state 7
    IMPRIMIR        shift and go to state 25
    INGRESAR        shift and go to state 24
    SI              shift and go to state 26
    MIENTRAS        shift and go to state 27
    PARA            shift and go to state 28
    CASOS           shift and go to state 29
    RETORNAR        shift and go to state 30
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    DOBLE           shift and go to state 33
    CARACTER        shift and go to state 34
    BOLEANO         shift and go to state 35

    sentencia                      shift and go to state 39
    declaracion_o_funcion          shift and go to state 11
    declaracion_arreglo            shift and go to state 12
    asignacion                     shift and go to state 13
    imprimir                       shift and go to state 14
    ingresar                       shift and go to state 15
    si                             shift and go to state 16
    mientras                       shift and go to state 17
    para                           shift and go to state 18
    casos                          shift and go to state 19
    retornar                       shift and go to state 20
    procedimiento                  shift and go to state 21
    tipo                           shift and go to state 22

state 9

    (3) sentencias -> sentencia .

    LLAVEDER        reduce using rule 3 (sentencias -> sentencia .)
    CONSTANTE       reduce using rule 3 (sentencias -> sentencia .)
    ID              reduce using rule 3 (sentencias -> sentencia .)
    IMPRIMIR        reduce using rule 3 (sentencias -> sentencia .)
    INGRESAR        reduce using rule 3 (sentencias -> sentencia .)
    SI              reduce using rule 3 (sentencias -> sentencia .)
    MIENTRAS        reduce using rule 3 (sentencias -> sentencia .)
    PARA            reduce using rule 3 (sentencias -> sentencia .)
    CASOS           reduce using rule 3 (sentencias -> sentencia .)
    RETORNAR        reduce using rule 3 (sentencias -> sentencia .)
    ENTERO          reduce using rule 3 (sentencias -> sentencia .)
    DECIMAL         reduce using rule 3 (sentencias -> sentencia .)
    DOBLE           reduce using rule 3 (sentencias -> sentencia .)
    CARACTER        reduce using rule 3 (sentencias -> sentencia .)
    BOLEANO         reduce using rule 3 (sentencias -> sentencia .)
    PARAR           reduce using rule 3 (sentencias -> sentencia .)


state 10

    (4) sentencias -> empty .

    LLAVEDER        reduce using rule 4 (sentencias -> empty .)
    CONSTANTE       reduce using rule 4 (sentencias -> empty .)
    ID              reduce using rule 4 (sentencias -> empty .)
    IMPRIMIR        reduce using rule 4 (sentencias -> empty .)
    INGRESAR        reduce using rule 4 (sentencias -> empty .)
    SI              reduce using rule 4 (sentencias -> empty .)
    MIENTRAS        reduce using rule 4 (sentencias -> empty .)
    PARA            reduce using rule 4 (sentencias -> empty .)
    CASOS           reduce using rule 4 (sentencias -> empty .)
    RETORNAR        reduce using rule 4 (sentencias -> empty .)
    ENTERO          reduce using rule 4 (sentencias -> empty .)
    DECIMAL         reduce using rule 4 (sentencias -> empty .)
    DOBLE           reduce using rule 4 (sentencias -> empty .)
    CARACTER        reduce using rule 4 (sentencias -> empty .)
    BOLEANO         reduce using rule 4 (sentencias -> empty .)
    PARAR           reduce using rule 4 (sentencias -> empty .)


state 11

    (5) sentencia -> declaracion_o_funcion .

    LLAVEDER        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    CONSTANTE       reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    ID              reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    IMPRIMIR        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    INGRESAR        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    SI              reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    MIENTRAS        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    PARA            reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    CASOS           reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    RETORNAR        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    ENTERO          reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    DECIMAL         reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    DOBLE           reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    CARACTER        reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    BOLEANO         reduce using rule 5 (sentencia -> declaracion_o_funcion .)
    PARAR           reduce using rule 5 (sentencia -> declaracion_o_funcion .)


state 12

    (6) sentencia -> declaracion_arreglo .

    LLAVEDER        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    CONSTANTE       reduce using rule 6 (sentencia -> declaracion_arreglo .)
    ID              reduce using rule 6 (sentencia -> declaracion_arreglo .)
    IMPRIMIR        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    INGRESAR        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    SI              reduce using rule 6 (sentencia -> declaracion_arreglo .)
    MIENTRAS        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    PARA            reduce using rule 6 (sentencia -> declaracion_arreglo .)
    CASOS           reduce using rule 6 (sentencia -> declaracion_arreglo .)
    RETORNAR        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    ENTERO          reduce using rule 6 (sentencia -> declaracion_arreglo .)
    DECIMAL         reduce using rule 6 (sentencia -> declaracion_arreglo .)
    DOBLE           reduce using rule 6 (sentencia -> declaracion_arreglo .)
    CARACTER        reduce using rule 6 (sentencia -> declaracion_arreglo .)
    BOLEANO         reduce using rule 6 (sentencia -> declaracion_arreglo .)
    PARAR           reduce using rule 6 (sentencia -> declaracion_arreglo .)


state 13

    (7) sentencia -> asignacion .

    LLAVEDER        reduce using rule 7 (sentencia -> asignacion .)
    CONSTANTE       reduce using rule 7 (sentencia -> asignacion .)
    ID              reduce using rule 7 (sentencia -> asignacion .)
    IMPRIMIR        reduce using rule 7 (sentencia -> asignacion .)
    INGRESAR        reduce using rule 7 (sentencia -> asignacion .)
    SI              reduce using rule 7 (sentencia -> asignacion .)
    MIENTRAS        reduce using rule 7 (sentencia -> asignacion .)
    PARA            reduce using rule 7 (sentencia -> asignacion .)
    CASOS           reduce using rule 7 (sentencia -> asignacion .)
    RETORNAR        reduce using rule 7 (sentencia -> asignacion .)
    ENTERO          reduce using rule 7 (sentencia -> asignacion .)
    DECIMAL         reduce using rule 7 (sentencia -> asignacion .)
    DOBLE           reduce using rule 7 (sentencia -> asignacion .)
    CARACTER        reduce using rule 7 (sentencia -> asignacion .)
    BOLEANO         reduce using rule 7 (sentencia -> asignacion .)
    PARAR           reduce using rule 7 (sentencia -> asignacion .)


state 14

    (8) sentencia -> imprimir .

    LLAVEDER        reduce using rule 8 (sentencia -> imprimir .)
    CONSTANTE       reduce using rule 8 (sentencia -> imprimir .)
    ID              reduce using rule 8 (sentencia -> imprimir .)
    IMPRIMIR        reduce using rule 8 (sentencia -> imprimir .)
    INGRESAR        reduce using rule 8 (sentencia -> imprimir .)
    SI              reduce using rule 8 (sentencia -> imprimir .)
    MIENTRAS        reduce using rule 8 (sentencia -> imprimir .)
    PARA            reduce using rule 8 (sentencia -> imprimir .)
    CASOS           reduce using rule 8 (sentencia -> imprimir .)
    RETORNAR        reduce using rule 8 (sentencia -> imprimir .)
    ENTERO          reduce using rule 8 (sentencia -> imprimir .)
    DECIMAL         reduce using rule 8 (sentencia -> imprimir .)
    DOBLE           reduce using rule 8 (sentencia -> imprimir .)
    CARACTER        reduce using rule 8 (sentencia -> imprimir .)
    BOLEANO         reduce using rule 8 (sentencia -> imprimir .)
    PARAR           reduce using rule 8 (sentencia -> imprimir .)


state 15

    (9) sentencia -> ingresar .

    LLAVEDER        reduce using rule 9 (sentencia -> ingresar .)
    CONSTANTE       reduce using rule 9 (sentencia -> ingresar .)
    ID              reduce using rule 9 (sentencia -> ingresar .)
    IMPRIMIR        reduce using rule 9 (sentencia -> ingresar .)
    INGRESAR        reduce using rule 9 (sentencia -> ingresar .)
    SI              reduce using rule 9 (sentencia -> ingresar .)
    MIENTRAS        reduce using rule 9 (sentencia -> ingresar .)
    PARA            reduce using rule 9 (sentencia -> ingresar .)
    CASOS           reduce using rule 9 (sentencia -> ingresar .)
    RETORNAR        reduce using rule 9 (sentencia -> ingresar .)
    ENTERO          reduce using rule 9 (sentencia -> ingresar .)
    DECIMAL         reduce using rule 9 (sentencia -> ingresar .)
    DOBLE           reduce using rule 9 (sentencia -> ingresar .)
    CARACTER        reduce using rule 9 (sentencia -> ingresar .)
    BOLEANO         reduce using rule 9 (sentencia -> ingresar .)
    PARAR           reduce using rule 9 (sentencia -> ingresar .)


state 16

    (10) sentencia -> si .

    LLAVEDER        reduce using rule 10 (sentencia -> si .)
    CONSTANTE       reduce using rule 10 (sentencia -> si .)
    ID              reduce using rule 10 (sentencia -> si .)
    IMPRIMIR        reduce using rule 10 (sentencia -> si .)
    INGRESAR        reduce using rule 10 (sentencia -> si .)
    SI              reduce using rule 10 (sentencia -> si .)
    MIENTRAS        reduce using rule 10 (sentencia -> si .)
    PARA            reduce using rule 10 (sentencia -> si .)
    CASOS           reduce using rule 10 (sentencia -> si .)
    RETORNAR        reduce using rule 10 (sentencia -> si .)
    ENTERO          reduce using rule 10 (sentencia -> si .)
    DECIMAL         reduce using rule 10 (sentencia -> si .)
    DOBLE           reduce using rule 10 (sentencia -> si .)
    CARACTER        reduce using rule 10 (sentencia -> si .)
    BOLEANO         reduce using rule 10 (sentencia -> si .)
    PARAR           reduce using rule 10 (sentencia -> si .)


state 17

    (11) sentencia -> mientras .

    LLAVEDER        reduce using rule 11 (sentencia -> mientras .)
    CONSTANTE       reduce using rule 11 (sentencia -> mientras .)
    ID              reduce using rule 11 (sentencia -> mientras .)
    IMPRIMIR        reduce using rule 11 (sentencia -> mientras .)
    INGRESAR        reduce using rule 11 (sentencia -> mientras .)
    SI              reduce using rule 11 (sentencia -> mientras .)
    MIENTRAS        reduce using rule 11 (sentencia -> mientras .)
    PARA            reduce using rule 11 (sentencia -> mientras .)
    CASOS           reduce using rule 11 (sentencia -> mientras .)
    RETORNAR        reduce using rule 11 (sentencia -> mientras .)
    ENTERO          reduce using rule 11 (sentencia -> mientras .)
    DECIMAL         reduce using rule 11 (sentencia -> mientras .)
    DOBLE           reduce using rule 11 (sentencia -> mientras .)
    CARACTER        reduce using rule 11 (sentencia -> mientras .)
    BOLEANO         reduce using rule 11 (sentencia -> mientras .)
    PARAR           reduce using rule 11 (sentencia -> mientras .)


state 18

    (12) sentencia -> para .
